<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_launcher"
        android:id="@+id/logo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/say_hi"
        android:textSize="32sp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/say_hi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:id="@+id/welcome"
        android:textSize="32sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:id="@+id/change_password"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:elevation="0dp" />
</LinearLayout>
